# euchre-cli

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  _coverpage.md  _homepage.md  changelog.md  coverage.xml  index.html  install.md  issues.md  justfile  pyproject.toml  requirements.txt  rules.md  setup.py  usage.md
.github/workflows/: python-publish.yml  python-test.yml
docs/: _404.md  _coverpage.md  _homepage.md  _sidebar.md  changelog.md  get-started.md  index.html  install.md  issues.md  rules.md  styles.css  troubleshooting.md  usage-guide.md  usage.md
euchre/: __init__.py  euchre.py
euchre/abstract/: card.py  face.py  human.py  player.py  suit.py  team.py
euchre/command/: play.py  rules.py
euchre/util/: __init__.py  card_util.py  input_util.py  log_util.py  player_util.py  rule_util.py
euchrecli/: __init__.py  card_util.py  deck_util.py  euchre.py  game.py  player_util.py  rule_util.py
euchrecli/abstract/: __init__.py  card.py  computer.py  face.py  human.py  player.py  team.py
euchrecli/command/: config.py  play.py  rules.py
euchrecli/commands/: play.py
euchrecli/util/: __init__.py  card_util.py  config_util.py  deck_util.py  env_util.py  input_util.py  log_util.py  output_util.py  player_util.py  rule_util.py
src/euchre/: __init__.py  root.py
src/euchre/abstract/: __init__.py  card.py  computer.py  face.py  human.py  player.py  suit.py  team.py
src/euchre/command/: play.py
src/euchre/util/: __init__.py  card_util.py  input_util.py  log_util.py  output_util.py  rule_util.py
tests/: __init__.py  test_card_util.py  test_euchre.py  test_rules_util.py
tests/abstract/: test_card.py  test_computer.py  test_face.py  test_human.py  test_player.py  test_suit.py  test_team.py
tests/command/: test_play.py  test_rules.py
tests/util/: test_card_util.py  test_input_util.py  test_player_util.py  test_rules_util.py
