[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "euchre-cli"
authors = [{ name = "Bradley Wojcik", email = "bradleycwojcik@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.10"
dynamic = ["version", "description"]
dependencies = [
  "click >=8",
  "names ==0.3.0",
  "loguru >=0.5.0",
]

[project.scripts]
euchre = "euchre.root:cli"

[project.urls]
Home = "https://boldandbrad.github.io/euchre-cli/"
Source = "https://github.com/boldandbrad/euchre-cli"

[project.optional-dependencies]
test = [
  "pytest >=6",
  "pytest-cov",
  "pytest-mock",
]
dev = [
  "ruff",
  "refurb",
  "pre-commit",
  "homebrew-pypi-poet",
]

[tool.flit.module]
name = "euchre"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]

[tool.ruff.lint]
# Never enforce `E501` (line length violations).
ignore = ["E501"]
